--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: xenial 
+dist: xenial
 language: python
 
 python:
@@ -14,8 +14,8 @@ script:
 after_success:
   - rm -rf .git/
   - git init
-  - git config user.name "Travis CI"
-  - git config user.email "travis@domain.com"
+  - git config user.name "tjnel"
+  - git config user.email "mikiozen@gmail.com"
   - git config --global push.default simple
   - git remote add origin https://${GITHUB_TOKEN}@github.com/tjnel/LC_OSINT_Feeds.git
   - make github
