--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ script:
 after_success:
   - rm -rf .git/
   - git init
-  - git config user.name "tjnel"
-  - git config user.email "mikiozen@gmail.com"
   - git config --global push.default simple
   - git remote add origin https://${GITHUB_TOKEN}@github.com/tjnel/LC_OSINT_Feeds.git
+  - git push origin master --quiet
   - make github
