--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,6 @@ after_success:
   - git init
   - git config --global push.default simple
   - git remote add origin https://${GITHUB_TOKEN}@github.com/tjnel/LC_OSINT_Feeds.git
+  - git add .
+  - git commit -m "build auto-generate"
   - git push origin master --quiet
